Don't block evaluating DBus scripts if widgets are locked.

Summary:
Original decision didn't really have a rationale:
https://git.reviewboard.kde.org/r/125648/

It's causing bugs in people doing somewhat sensible things.
BUG: 380347

If widgets are locked, the script will still fail when it tries to do
something it can't.

Reviewers: #plasma, broulik

Subscribers: mart, broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D11375